# Arigato_Crypto_Roboto

./: .gitignore  README.md
PCB_files/: EC544_Netlist  EC544_Partlist  EC544_v0_Netlist  EC544_v0_Partlist  EC544_v3_BOM.txt  EC544_v3_Netlist  EC544_v3_Partlist
PCB_files/EAGLE CAD Schematic and Board Project Versions/EC544_v0/: EC544_v1.sch
PCB_files/EAGLE CAD Schematic and Board Project Versions/EC544_v0.5/: EC544.brd  EC544.sch  eagle.epf
PCB_files/EAGLE CAD Schematic and Board Project Versions/EC544_v1/: EC544.b#1  EC544.b#2  EC544.b#4  EC544.pro  eagle.epf
PCB_files/EAGLE CAD Schematic and Board Project Versions/EC544_v2/: EC544.b#5  EC544.brd  EC544.s#1  EC544.s#6  EC544.s#9
PCB_files/EAGLE CAD Schematic and Board Project Versions/EC544_v2.5/: EC544.b#1  EC544.b#2  EC544.brd  EC544.s#7  EC544.s#9
PCB_files/EAGLE CAD Schematic and Board Project Versions/EC544_v3/: EC544.b#1  EC544.b#5  EC544.b#7  EC544.sch  eagle.epf
PCB_files/EC544_v0.5/: eagle.epf
PCB_files/EC544_v1/: EC544.b#3  EC544.brd  EC544.pro  EC544.s#1  eagle.epf
PCB_files/EC544_v2/: EC544.b#3  EC544.b#6  EC544.b#7  EC544.b#8  EC544.b#9  EC544.s#8
PCB_files/EC544_v2.5/: EC544.b#3  EC544.b#5  EC544.b#6  EC544.s#1  EC544.s#2  eagle.epf
PCB_files/EC544_v3/: EC544.b#2  EC544.b#8  EC544.s#1  EC544.s#7
PCB_files/EC544_v3.5/: EC544.b#1  EC544.b#5  EC544.brd  EC544.s#5
PCB_files/PCB Assembly/: README.md
PCB_files/Project Files/: EC544_v1.b#1  EC544_v1.brd
PCB_files/Schematic Parts Library/: 52435-2471.lbr  Freedom.lbr  MBR0530.lbr  NR6012T100ME.lbr  Si1308EDL-T1-GE3.lbr
RPi/arigato_shadow/: CMakeLists.txt  shadow_demo_main.c
RPi/arigato_shadow2/: CMakeLists.txt  demo_config.h  shadow_demo_main.c
RPi/motor_control/: motor.py  motor_test_script.py
RPi/mqtt_demo_files/: mqtt_demo_mutual_auth.c
RPi/robot/: CMakeLists.txt  robot.c
RPi/shadow_demo_main/: shadow_demo_main.c
RPi/shadow_demo_main/tests/: shadow_demo_main_2.c  shadow_demo_main_superloop.c
crypto_app/: crypto_app.py  requirements.txt
eink_firmware/development/.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
eink_firmware/development/eink_spi_FreeRTOS_optional/: .cproject  .project  eink_spi_FreeRTOS_optional JLink Debug.launch
ros_files/my_cpp_pkg/: CMakeLists.txt  package.xml
ros_files/my_cpp_pkg/src/: my_first_node.cpp  my_first_node_v1.cpp
ros_files/my_py_pkg/: package.xml  setup.py
(+73 files in other folders)
